<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search"></string>
    <string name="start_multi_user_chat">"faqiqunliao"</string>
    <string name="add_friends">add friends</string>
    <string name="add">add</string>
    <string name="scan">scan</string>
    <string name="feedback">feedback</string>
    <string name="action_search">search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
